--- a/adminhub-master/message-box.html
+++ b/adminhub-master/message-box.html
@@ -10,6 +10,9 @@
 	<!-- My CSS -->
 	<link rel="stylesheet" href="style.css">
 
+	<!--=============== REMIXICONS ===============-->
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+
 	<title>AdminHub</title>
 </head>
 
@@ -23,7 +26,7 @@
 			<span class="text">Raghunathpur Block</span>
 		</a>
 		<ul class="side-menu top">
-			<li >
+			<li>
 				<a href="index.html">
 					<i class='bx bxs-dashboard'></i>
 					<span class="text">Dashboard</span>
@@ -162,37 +165,38 @@
 				</div>
 			</div>
 
-			
+
 
 
 			<div class="table-data">
-				
+
 				<div class="todo">
 					<div class="head">
 						<h3>Message</h3>
-						<i class='bx bx-plus'></i>
-						<i class='bx bx-filter'></i>
+						<!-- <i class='bx bx-plus'></i>
+						<i class='bx bx-filter'></i> -->
 					</div>
 					<ul class="todo-list">
 						<li class="completed">
-							<p>Message-1</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<p>Message From Director PRDW Dept.</p>
+							<!-- <i class='bx bx-dots-vertical-rounded'></i> -->
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 						<li class="completed">
-							<p>Message-2</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<p>Message from CDO ZP Jagatsinghpur</p>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 						<li class="not-completed">
 							<p>Message-3</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 						<li class="completed">
 							<p>Message-4</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 						<li class="not-completed">
 							<p>Message-5</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 					</ul>
 				</div>
