--- a/adminhub-master/message.html
+++ b/adminhub-master/message.html
@@ -48,9 +48,9 @@
 				</a>
 			</li>
 			<li >
-				<a href="">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
-					<span class="text">Task Status</span>
+					<span class="text">Message</span>
 				</a>
 			</li>
 			<!-- <li>
@@ -224,8 +224,12 @@
 						<thead>
 							<tr>
 								<th>Scheme Name</th>
-								<th>Task </th>
-								<th>Submission Date </th>
+								<th>Task Name</th>
+								<th>Sender</th>
+								<th>Attachment</th>
+								<th>Upload Report</th>
+								<th>Task Date </th>
+								<th>Deadline Date </th>
 								<th>Status</th>
 							</tr>
 						</thead>
@@ -236,7 +240,11 @@
 									<p>PMAY</p>
 								</td>
 								<td>Upload Data</td>
+								<td>Department</td>
+								<td>Download Attachment</td>
+								<td>File Attached</td>
 								<td>01-10-2021</td>
+								<td>01-11-2021</td>
 								<td><span class="status completed">Completed</span></td>
 							</tr>
 							<tr>
@@ -245,7 +253,11 @@
 									<p>NRLM</p>
 								</td>
 								<td>Upload Data</td>
+								<td>Department</td>
+								<td>Download Attachment</td>
+								<td><input type="file"></td>
 								<td>01-10-2021</td>
+								<td>01-12-2021</td>
 								<td><span class="status deadline">Deadline Crossed</span></td>
 							</tr>
 							<tr>
@@ -254,7 +266,11 @@
 									<p>PMAY</p>
 								</td>
 								<td>Upload Image</td>
+								<td>Department</td>
+								<td>Download Attachment</td>
+								<td><input type="file"></td>
 								<td>01-10-2021</td>
+								<td>01-11-2021</td>
 								<td><span class="status pending">Inprogress</span></td>
 							</tr>
 							<tr>
@@ -263,7 +279,11 @@
 									<p>Rural Housing</p>
 								</td>
 								<td>Add Info</td>
+								<td>Department</td>
+								<td>Download Attachment</td>
+								<td><input type="file"></td>
 								<td>01-10-2021</td>
+								<td>01-12-2021</td>
 								<td><span class="status pending">Inprogress</span></td>
 							</tr>
 							<tr>
@@ -272,7 +292,11 @@
 									<p>PMAY</p>
 								</td>
 								<td>Add Details</td>
+								<td>Department</td>
+								<td>Download Attachment</td>
+								<td>File Attached</td>
 								<td>01-10-2021</td>
+								<td>01-11-2021</td>
 								<td><span class="status completed">Completed</span></td>
 							</tr>
 						</tbody>
