--- a/state admin/deadline-crossed.html
+++ b/state admin/deadline-crossed.html
@@ -49,8 +49,8 @@
 				</a>
 			</li>
 			<li class="active">
-				<a href="#">
-					<i class='bx bxs-message-dots'></i>
+				<a href="taskassignment.html">
+					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
