--- a/state admin/index.html
+++ b/state admin/index.html
@@ -197,22 +197,22 @@
 					<div class="skill-box">
 						<div class="skill-bar">
 							<span class="skill-per css">
-								<span class="tooltip">90%</span>
+								<span class="tooltip">70%</span>
 							</span>
 						</div>
 					</div>
 				</li>
 				<li>
 					<div class="content">
-						<a href="https://pmaymis.gov.in/" target="_blank">
-							<h3>CFCA</h3>
+						<a href="https://amaodisha-nabinodisha.odisha.gov.in/" target="_blank">
+							<h3>BGBO</h3>
 						</a>
-						<a href="https://nrlm.gov.in/outerReportAction.do?methodName=showIndex#gsc.tab=0" target="_blank"><img src="img/logo.png" alt="" class="bx"></a>
+						<a href="https://amaodisha-nabinodisha.odisha.gov.in/" target="_blank"><img src="img/img.jpg" alt="" class="bx"></a>
 					</div>
 					<div class="skill-box">
 						<div class="skill-bar">
 							<span class="skill-per javascript">
-								<span class="tooltip">90%</span>
+								<span class="tooltip">50%</span>
 							</span>
 						</div>
 					</div>
@@ -242,7 +242,7 @@
 					<div class="skill-box">
 						<div class="skill-bar">
 							<span class="skill-per css">
-								<span class="tooltip">90%</span>
+								<span class="tooltip">70%</span>
 							</span>
 						</div>
 					</div>
@@ -257,7 +257,7 @@
 					<div class="skill-box">
 						<div class="skill-bar">
 							<span class="skill-per javascript">
-								<span class="tooltip">90%</span>
+								<span class="tooltip">50%</span>
 							</span>
 						</div>
 					</div>
