--- a/state admin/message-box.html
+++ b/state admin/message-box.html
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="logout">
+                <a href="../index.html" class="logout">
                     <i class='bx bxs-log-out-circle'></i>
                     <span class="text">Logout</span>
                 </a>
@@ -191,15 +191,56 @@
                         </div> -->
 
                         <div class="column">
+                            <div class="input-box">
+                                <label>Select District</label>
+                                <!-- <input type="text" placeholder="Achieved" required /> -->
+                                <select name="" id="" class="input-box" style="position: relative;
+                                height: 50px;
+                                width: 100%;
+                                outline: none;
+                                font-size: 1rem;
+                                color: #707070;
+                                margin-top: 8px;
+                                border: 1px solid #ddd;
+                                border-radius: 6px;
+                                padding: 0 15px;">
+                                    <option value="">All</option>
+                                    <option value="">Jagatsinghpur</option>
+                                    <option value="">Khurdha</option>
+                                    <option value="">Cuttack</option>
+                                    <option value="">Puri</option>
+                                    <option value="">Kendrapada</option>
+                                    <option value="">Sambalpur</option>
+                                    <option value="">Kalahandi</option>
+                                    <option value="">Raygada</option>
+                                </select>
 
-                            <div class="input-box">
-                                <label>District</label>
-                                <input type="text" placeholder="Enter District" required />
                             </div>
                             <div class="input-box">
-                                <label>Block</label>
-                                <input type="text" placeholder="Enter Block" required />
+                                <label>Select Block</label>
+                                <!-- <input type="text" placeholder="Enter Funds allocated" required /> -->
+                                <select name="" id="" class="input-box" style="position: relative;
+	height: 50px;
+	width: 100%;
+	outline: none;
+	font-size: 1rem;
+	color: #707070;
+	margin-top: 8px;
+	border: 1px solid #ddd;
+	border-radius: 6px;
+	padding: 0 15px;">
+                                    <option value="">All</option>
+                                    <option value="">Raghunathpur</option>
+                                    <option value="">Jagarsinghpur</option>
+                                    <option value="">Balikuda</option>
+                                    <option value="">Biridi</option>
+                                    <option value="">Kendrapada</option>
+                                    <option value="">Sambalpur</option>
+                                    <option value="">Kalahandi</option>
+                                    <option value="">Raygada</option>
+                                </select>
                             </div>
+                            
                         </div>
                         <div class="column">
 
