--- a/state admin/taskassign-1.html
+++ b/state admin/taskassign-1.html
@@ -44,12 +44,12 @@
             <li>
                 <a href="effcience.html">
                     <i class='bx bxs-doughnut-chart'></i>
-                    <span class="text">Effcience</span>
+                    <span class="text">Efficiency</span>
                 </a>
             </li>
             <li class="active">
                 <a href="taskassignment.html">
-                    <i class='bx bxs-message-dots'></i>
+                    <i class='bx bx-task'></i>
                     <span class="text">Task Assignment</span>
                 </a>
             </li>
@@ -192,15 +192,60 @@
                         </div> -->
 
                         <div class="column">
+                            <div class="input-box">
+                                <label>Select District</label>
+                                <!-- <input type="text" placeholder="Achieved" required /> -->
+                                <select name="" id="" class="input-box" style="position: relative;
+                                height: 50px;
+                                width: 100%;
+                                outline: none;
+                                font-size: 1rem;
+                                color: #707070;
+                                margin-top: 8px;
+                                border: 1px solid #ddd;
+                                border-radius: 6px;
+                                padding: 0 15px;">
+                                    <option value="">All</option>
+                                    <option value="">Jagatsinghpur</option>
+                                    <option value="">Khurdha</option>
+                                    <option value="">Cuttack</option>
+                                    <option value="">Puri</option>
+                                    <option value="">Kendrapada</option>
+                                    <option value="">Sambalpur</option>
+                                    <option value="">Kalahandi</option>
+                                    <option value="">Raygada</option>
+                                </select>
 
-                            <div class="input-box">
-                                <label>District</label>
-                                <input type="text" placeholder="Enter District Name" required />
                             </div>
                             <div class="input-box">
-                                <label>Block</label>
-                                <input type="text" placeholder="Enter Block Name" required />
+                                <label>Select Block</label>
+                                <!-- <input type="text" placeholder="Enter Funds allocated" required /> -->
+                                <select name="" id="" class="input-box" style="position: relative;
+	height: 50px;
+	width: 100%;
+	outline: none;
+	font-size: 1rem;
+	color: #707070;
+	margin-top: 8px;
+	border: 1px solid #ddd;
+	border-radius: 6px;
+	padding: 0 15px;">
+                                    <option value="">All</option>
+                                    <option value="">Raghunathpur</option>
+                                    <option value="">Jagarsinghpur</option>
+                                    <option value="">Balikuda</option>
+                                    <option value="">Biridi</option>
+                                    <option value="">Kendrapada</option>
+                                    <option value="">Sambalpur</option>
+                                    <option value="">Kalahandi</option>
+                                    <option value="">Raygada</option>
+                                </select>
                             </div>
+                            <div class="input-box">
+                                <label>Task Name</label>
+                                <input type="text" placeholder="Enter Task Name" required />
+                            </div>
+                            
                         </div>
                         <div class="column">
 
