--- a/adminhub-master/index.html
+++ b/adminhub-master/index.html
@@ -9,6 +9,8 @@
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<!-- My CSS -->
 	<link rel="stylesheet" href="style.css">
+	<!--=============== REMIXICONS ===============-->
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
 	<title>AdminHub</title>
 </head>
@@ -20,7 +22,7 @@
 	<section id="sidebar">
 		<a href="#" class="brand">
 			<i class='bx bxs-house'></i>
-			<span class="text">Raghunathpur Block</span>
+			<span class="text-1">Raghunathpur Block</span>
 		</a>
 		<ul class="side-menu top">
 			<li class="active">
@@ -188,22 +190,22 @@
 					<div class="skill-box">
 						<div class="skill-bar">
 							<span class="skill-per css">
-								<span class="tooltip">90%</span>
+								<span class="tooltip">70%</span>
 							</span>
 						</div>
 					</div>
 				</li>
 				<li>
 					<div class="content">
-						<a href="https://pmaymis.gov.in/" target="_blank">
-							<h3>CFCA</h3>
+						<a href="https://amaodisha-nabinodisha.odisha.gov.in/" target="_blank">
+							<h3>BGBO</h3>
 						</a>
-						<a href="https://nrlm.gov.in/outerReportAction.do?methodName=showIndex#gsc.tab=0" target="_blank"><img src="img/logo.png" alt="" class="bx"></a>
+						<a href="https://nrlm.gov.in/outerReportAction.do?methodName=showIndex#gsc.tab=0" target="_blank"><img src="img/img.jpg" alt="" class="bx"></a>
 					</div>
 					<div class="skill-box">
 						<div class="skill-bar">
 							<span class="skill-per javascript">
-								<span class="tooltip">90%</span>
+								<span class="tooltip">50%</span>
 							</span>
 						</div>
 					</div>
@@ -233,7 +235,7 @@
 					<div class="skill-box">
 						<div class="skill-bar">
 							<span class="skill-per css">
-								<span class="tooltip">90%</span>
+								<span class="tooltip">70%</span>
 							</span>
 						</div>
 					</div>
@@ -248,7 +250,7 @@
 					<div class="skill-box">
 						<div class="skill-bar">
 							<span class="skill-per javascript">
-								<span class="tooltip">90%</span>
+								<span class="tooltip">50%</span>
 							</span>
 						</div>
 					</div>
@@ -352,24 +354,24 @@
 					</div>
 					<ul class="todo-list">
 						<li class="completed">
-							<p>Message-1</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<p>Message From Director PRDW Dept.</p>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 						<li class="completed">
-							<p>Message-2</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<p>Message from CDO ZP Jagatsinghpur</p>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 						<li class="not-completed">
 							<p>Message-3</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 						<li class="completed">
 							<p>Message-4</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 						<li class="not-completed">
 							<p>Message-5</p>
-							<i class='bx bx-dots-vertical-rounded'></i>
+							<i class="ri-eye-line" style="color: orange;"></i>
 						</li>
 					</ul>
 				</div>
