--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             </div>
             <div class="header-right">
                 <div class="social-media-icon">
-                    <a href="./login/index.html"><i class="ri-login-circle-line">login</i></a>
-                    <a href="#"><i class="ri-instagram-line"></i></a>
-                    <a href="#"><i class="ri-facebook-circle-line"></i></a>
+                    <a href="./login/index.html"><i class="ri-login-circle-line"  style="color: #fff;">login</i></a>
+                    <a href="#"><i class="ri-instagram-line" style="color: rgb(255, 0, 106);"></i></a>
+                    <a href="#"><i class="ri-facebook-circle-line" style="color: blue;"></i></a>
                     <a href="#"><i class="ri-twitter-line"></i></a>
 
                 </div>
