--- a/state admin/taskassignment.html
+++ b/state admin/taskassignment.html
@@ -48,13 +48,13 @@
 				</a>
 			</li>
 			<li class="active">
-				<a href="#">
+				<a href="taskassignment.html">
 					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Message</span>
 				</a>
@@ -225,7 +225,7 @@
 						</li>
 						<li>
 							<div class="content">
-								<img src="img/logo.png" alt="" class="bx">
+								<img src="img/img.jpg" alt="" class="bx">
 								<!-- <i class='bx bxs-calendar-check' ></i> -->
 								<span class="text">
 
