--- a/state admin/view-task-district.html
+++ b/state admin/view-task-district.html
@@ -75,7 +75,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="logout">
+				<a href="../index.html" class="logout">
 					<i class='bx bxs-log-out-circle'></i>
 					<span class="text">Logout</span>
 				</a>
@@ -179,15 +179,16 @@
 						<!-- <i class='bx bxs-file-pdf'></i> -->
 						<!-- <i class='bx bx-search'></i>
 						<i class='bx bx-filter'></i> -->
+                        <a href="taskassignment.html"><h4>Assign New Task</h4></a>
                         <a href="view-task-block.html"><h4>Block task Status</h4></a>
 					</div>
                     <ul class="box-info task-content-data">
                         <li style="background: rgb(0, 255, 128);">
                             <div class="content task-content-status">
-                                <a href="completed.html" target="_blank">
+                                <a href="completed.html" >
                                     <h3>10</h3>
                                 </a>
-                                <a href="completed.html" target="_blank">
+                                <a href="completed.html" >
                                     <h3>Completed </h3>
                                 </a>
                             </div>
@@ -206,10 +207,10 @@
                         </li >
                         <li style="background: rgb(255, 42, 0);">
                             <div class="content task-content-status">
-                                <a href="deadline-crossed.html" target="_blank">
+                                <a href="deadline-crossed.html" >
                                     <h3 >10</h3>
                                 </a>
-                                <a href="deadline-crossed.html" target="_blank">
+                                <a href="deadline-crossed.html" >
                                     <h3>Deadline Crossed</h3>
                                 </a>
                             </div>
