--- a/state admin/view-task.html
+++ b/state admin/view-task.html
@@ -49,8 +49,8 @@
 				</a>
 			</li>
 			<li class="active">
-				<a href="#">
-					<i class='bx bxs-message-dots'></i>
+				<a href="taskassignment.html">
+					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
@@ -179,7 +179,7 @@
 						<!-- <i class='bx bxs-file-pdf'></i> -->
 						<!-- <i class='bx bx-search'></i>
 						<i class='bx bx-filter'></i> -->
-                        <a href="taskassign-1.html"><h4>Add New Task</h4></a>
+                        <a href="taskassignment.html"><h4>Add New Task</h4></a>
 					</div>
 					<!-- <div class="order filetr-section">
 						<div class="state-filter">
@@ -216,6 +216,7 @@
 							<tr>
 								<th>Sl No.</th>
 								<th>Task Date</th>
+								<th>Task Name</th>
 								<th>Attachment </th>
 								<th>Deadline Date</th>
 								<th>Action</th>
@@ -226,6 +227,7 @@
 							<tr>
 								<td>01</td>
 								<td>01-10-2024</td>
+								<td>Task1</td>
 								<td>Document</td>
 								<td>01-11-2024</td>
 								<td>
@@ -238,6 +240,7 @@
 							<tr>
 								<td>02</td>
 								<td>01-10-2024</td>
+								<td>Task2</td>
 								<td>Document</td>
 								<td>01-11-2024</td>
 								<td>
