--- a/state admin/view-task-block.html
+++ b/state admin/view-task-block.html
@@ -180,10 +180,10 @@
 					<ul class="box-info task-content-data">
 						<li style="background: rgb(0, 255, 128);">
 							<div class="content task-content-status">
-								<a href="https://pmaymis.gov.in/" target="_blank">
+								<a href="completed.html" target="_blank">
 									<h3>10</h3>
 								</a>
-								<a href="https://pmaymis.gov.in/" target="_blank">
+								<a href="completed.html" target="_blank">
 									<h3>Completed </h3>
 								</a>
 							</div>
@@ -191,10 +191,10 @@
 						</li>
 						<li style="background: rgb(255, 174, 0);">
 							<div class="content task-content-status">
-								<a href="https://pmaymis.gov.in/" target="_blank">
+								<a href="" target="_blank">
 									<h3>10</h3>
 								</a>
-								<a href="https://pmaymis.gov.in/" target="_blank">
+								<a href="" target="_blank">
 									<h3>In Progress</h3>
 								</a>
 							</div>
@@ -202,11 +202,11 @@
 						</li>
 						<li style="background: rgb(255, 42, 0);">
 							<div class="content task-content-status">
-								<a href="https://pmaymis.gov.in/" target="_blank">
+								<a href="" target="_blank">
 									<h3>10</h3>
 								</a>
-								<a href="https://pmaymis.gov.in/" target="_blank">
-									<h3>Overdue</h3>
+								<a href="deadline-crossed.html" target="_blank">
+									<h3>Deadline Crossed</h3>
 								</a>
 							</div>
 
