--- a/state admin/view-task.html
+++ b/state admin/view-task.html
@@ -9,6 +9,8 @@
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<!-- My CSS -->
 	<link rel="stylesheet" href="style.css">
+	<!--=============== REMIXICONS ===============-->
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
 	<title>AdminHub</title>
 </head>
@@ -217,6 +219,7 @@
 								<th>Sl No.</th>
 								<th>Task Date</th>
 								<th>Task Name</th>
+								<th>Scheme Name</th>
 								<th>Attachment </th>
 								<th>Deadline Date</th>
 								<th>Action</th>
@@ -228,11 +231,12 @@
 								<td>01</td>
 								<td>01-10-2024</td>
 								<td>Task1</td>
+								<td>PMAY</td>
 								<td>Document</td>
 								<td>01-11-2024</td>
 								<td>
                                     <a href="taskassign-1.html"><i class='bx bx-edit' ></i></a>
-                                    <a href="view-task-district.html"><i class='bx bx-window-open'></i></a>
+                                    <a href="view-task-district.html"><i class="ri-eye-line" style="color: orange;"></i></a>
                                 </td>
 
 								
@@ -241,11 +245,24 @@
 								<td>02</td>
 								<td>01-10-2024</td>
 								<td>Task2</td>
+								<td>NRLM</td>
 								<td>Document</td>
 								<td>01-11-2024</td>
 								<td>
                                     <a href="taskassign-1.html"><i class='bx bx-edit' ></i></a>
-                                    <a href="view-task-district.html"><i class='bx bx-window-open'></i></a>
+                                    <a href="view-task-district.html"><i class="ri-eye-line" style="color: orange;"></i></a>
+                                </td>
+							</tr>
+							<tr>
+								<td>03</td>
+								<td>01-10-2024</td>
+								<td>Task3</td>
+								<td>BGBO</td>
+								<td>Document</td>
+								<td>01-11-2024</td>
+								<td>
+                                    <a href="taskassign-1.html"><i class='bx bx-edit' ></i></a>
+                                    <a href="view-task-district.html"><i class="ri-eye-line" style="color: orange;"></i></a>
                                 </td>
 							</tr>
 						</tbody>
