--- a/state admin/completed.html
+++ b/state admin/completed.html
@@ -32,24 +32,30 @@
             <li>
                 <a href="upload-data.html">
                     <i class='bx bxs-shopping-bag-alt'></i>
-                    <span class="text">Update Data</span>
+                    <span class="text">Set Target</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="create-scheme.html">
                     <i class='bx bxs-doughnut-chart'></i>
-                    <span class="text">Efficiency
+                    <span class="text">Create Scheme
                     </span>
                 </a>
             </li>
-            <li class="active">
+            <li >
                 <a href="#">
-                    <i class='bx bxs-message-dots'></i>
+                    <i class='bx bxs-doughnut-chart'></i>
+                    <span class="text">Efficiency</span>
+                </a>
+            </li>
+            <li class="active">
+                <a href="taskassignment.html">
+                    <i class='bx bx-task'></i>
                     <span class="text">Task Assignment</span>
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="message-box.html">
                     <i class='bx bxs-message-dots'></i>
                     <span class="text">Message</span>
                 </a>
@@ -181,6 +187,7 @@
                         <thead>
                             <tr>
                                 <th>Sl No.</th>
+                                <th>Scheme Name</th>
                                 <th>District</th>
                                 <th>Block</th>
                                 <th>Task Date</th>
@@ -194,6 +201,7 @@
                         <tbody>
                             <tr>
                                 <td>01</td>
+                                <td>PMAY</td>
                                 <td>Jagatsinghpur</td>
                                 <td>Raghunathpur</td>
                                 <td>01-10-2024</td>
@@ -208,7 +216,8 @@
 
                             </tr>
                             <tr>
-                                <td>01</td>
+                                <td>02</td>
+                                <td>BGBO</td>
                                 <td>Jagatsinghpur</td>
                                 <td>Raghunathpur</td>
                                 <td>01-10-2024</td>
