--- a/state admin/deadline-crossed.html
+++ b/state admin/deadline-crossed.html
@@ -186,6 +186,7 @@
                         <thead>
                             <tr>
                                 <th>Sl No.</th>
+								<th>Scheme Name</th>
                                 <th>District</th>
                                 <th>Block</th>
                                 <th>Task Date</th>
@@ -199,6 +200,7 @@
                         <tbody>
                             <tr>
                                 <td>01</td>
+								<td>PMAY</td>
                                 <td>Jagatsinghpur</td>
                                 <td>Raghunathpur</td>
                                 <td>01-10-2024</td>
@@ -214,6 +216,7 @@
                             </tr>
                             <tr>
                                 <td>01</td>
+								<td>BGBO</td>
                                 <td>Jagatsinghpur</td>
                                 <td>Raghunathpur</td>
                                 <td>01-10-2024</td>
