--- a/state admin/create-scheme.html
+++ b/state admin/create-scheme.html
@@ -48,7 +48,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="taskassignment.html">
                     <i class='bx bx-task'></i>
                     <span class="text">Task Assignment</span>
                 </a>
