--- a/adminhub-master/index.html
+++ b/adminhub-master/index.html
@@ -314,7 +314,7 @@
 								</td>
 								<td>Upload Data</td>
 								<td>01-10-2021</td>
-								<td><span class="status pending">Pending</span></td>
+								<td><span class="status pending">Deadline Crossed</span></td>
 							</tr>
 							<tr>
 								<td>
@@ -323,7 +323,7 @@
 								</td>
 								<td>Upload Image</td>
 								<td>01-10-2021</td>
-								<td><span class="status process">Process</span></td>
+								<td><span class="status process">In Progress</span></td>
 							</tr>
 							<tr>
 								<td>
@@ -332,7 +332,7 @@
 								</td>
 								<td>Add Info</td>
 								<td>01-10-2021</td>
-								<td><span class="status pending">Pending</span></td>
+								<td><span class="status pending">Deadline Crossed</span></td>
 							</tr>
 							<tr>
 								<td>
