--- a/adminhub-master/update-data-1.html
+++ b/adminhub-master/update-data-1.html
@@ -169,38 +169,46 @@
                         <a href="view-data.html">View Data</a>
                         <!-- <i class='bx bx-filter'></i> -->
                     </div>
+                    <div style="display: flex; flex-direction:column">
+                        <label >Upload Abstract Report</label>
+                        <input type="file" placeholder="Enter current value" required  style="position: relative;
+                        height: 50px;
+                        width: 50%;
+                        outline: none;
+                        font-size: 1rem;
+                        color: #707070;
+                        margin-top: 8px;
+                        border: 1px solid #ddd;
+                        border-radius: 6px;
+                        padding: 0 15px;"/>
+                    </div>
                     <form action="#" class="form">
                        
                         <div class="column">
                             <div class="input-box">
-                                <label>Date</label>
-                                <input type="date" placeholder="Enter Date" required />
+                                <label >Date</label>
+                                <input type="number" placeholder="14/11/2024" required />
                             </div>
                             <div class="input-box">
-                                <label>Current value of achievement</label>
-                                <input type="text" placeholder="Enter current value" required />
+                                <label>Target Value</label>
+                                <input type="text" placeholder="1200" required />
                             </div>
                         </div>
                         <div class="column">
                             <div class="input-box">
-                                <label>Achieved</label>
-                                <input type="text" placeholder="Achieved" required />
+                                <label>Target Date</label>
+                                <input type="text" placeholder="15/11/2024" required />
                             </div>
                             <div class="input-box">
-                                <label>Funds allocated</label>
-                                <input type="text" placeholder="Enter Funds allocated" required />
+                                <label>Target Deadline Date</label>
+                                <input type="text" placeholder="20/11/2024" required />
+                            </div>
+                            <div class="input-box">
+                                <label>Achieved Value</label>
+                                <input type="text" placeholder="1150" required />
                             </div>
                         </div>
-                        <div class="column">
-                            <div class="input-box">
-                                <label>Expenditure</label>
-                                <input type="text" placeholder="Expenditure" required />
-                            </div>
-                            <div class="input-box">
-                                <label>Upload supporting documents</label>
-                                <input type="file" placeholder="Enter current value" required />
-                            </div>
-                        </div>
+                        
                         <div class="input-box">
                             <label>Remarks</label>
                             <input type="text" placeholder="Enter Remarks" required />
