--- a/adminhub-master/view-data.html
+++ b/adminhub-master/view-data.html
@@ -177,12 +177,10 @@
 						<thead>
 							<tr>
 								<th>Date</th>
-								<th>Current value of achievement</th>
-								<th>Target </th>
-								<th>Deadline Date</th>
-								<th>Achieved</th>
-								<th>Funds allocated</th>
-								<th>Expenditure done</th>
+								<th>Target Value</th>
+								<th>Target Date </th>
+								<th>Target Deadline Date</th>
+								<th>Achieved Value</th>
 								<th>Upload supporting documents</th>
 								<th>Remarks</th>
                                 
@@ -192,12 +190,10 @@
 						<tbody>
 							<tr>
 								<td>01-10-2024</td>
-								<td>1000</td>
-								<td>1500</td>
-								<td>01-10-2024</td>
-								<td>1300</td>
-								<td>3,00,000</td>
-								<td>2,00,000</td>
+								<td>1200</td>
+								<td>15-11-2024</td>
+								<td>20-11-2024</td>
+								<td>1150</td>
 								<td><a href="">View Document</a></td>
                                 <td>Remark 1</td>
 								
