--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="https://bhulekh.ori.nic.in/RoRView.aspx">
                             <div class="p-service-data">
                                 <div class="p-s-img">
                                     <img src="./assets/img/revenue.png" alt="">
@@ -708,7 +708,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="https://www.ulbodisha.gov.in/">
                             <div class="p-service-data">
                                 <div class="p-s-img">
                                     <img src="./assets/img/certificate.png" alt="">
@@ -718,7 +718,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="https://www.samsodisha.gov.in/">
                             <div class="p-service-data">
                                 <div class="p-s-img">
                                     <img src="./assets/img/sams.png" alt="">
@@ -728,7 +728,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="https://www.samsodisha.gov.in/">
                             <div class="p-service-data">
                                 <div class="p-s-img">
                                     <img src="./assets/img/e-dist.png" alt="">
@@ -738,7 +738,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="https://sugam.odisha.gov.in/website/home">
                             <div class="p-service-data">
                                 <div class="p-s-img">
                                     <img src="./assets/img/go-sugam.png" alt="">
@@ -748,7 +748,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="https://uidai.gov.in/">
                             <div class="p-service-data">
                                 <div class="p-s-img">
                                     <img src="./assets/img/aadhaar.png" alt="">
@@ -758,7 +758,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="">
+                        <a href="https://scholarship.odisha.gov.in/website/home">
                             <div class="p-service-data">
                                 <div class="p-s-img">
                                     <img src="./assets/img/schlarship.png" alt="">
