--- a/state admin/completed.html
+++ b/state admin/completed.html
@@ -36,18 +36,17 @@
                 </a>
             </li>
             <li>
-                <a href="create-scheme.html">
-                    <i class='bx bxs-doughnut-chart'></i>
-                    <span class="text">Create Scheme
-                    </span>
-                </a>
-            </li>
-            <li >
-                <a href="#">
-                    <i class='bx bxs-doughnut-chart'></i>
-                    <span class="text">Efficiency</span>
-                </a>
-            </li>
+				<a href="create-scheme.html">
+					<i class='bx bx-file'></i>
+					<span class="text">Create Scheme</span>
+				</a>
+			</li>
+			<li>
+				<a href="effcience.html">
+					<i class='bx bxs-doughnut-chart'></i>
+					<span class="text">Efficiency</span>
+				</a>
+			</li>
             <li class="active">
                 <a href="taskassignment.html">
                     <i class='bx bx-task'></i>
@@ -75,7 +74,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="logout">
+                <a href="../index.html" class="logout">
                     <i class='bx bxs-log-out-circle'></i>
                     <span class="text">Logout</span>
                 </a>
