--- a/state admin/view-task-block.html
+++ b/state admin/view-task-block.html
@@ -29,27 +29,33 @@
 					<span class="text">Dashboard</span>
 				</a>
 			</li>
-			<li>
+			<li >
 				<a href="upload-data.html">
 					<i class='bx bxs-shopping-bag-alt'></i>
-					<span class="text">Update Data</span>
+					<span class="text">Set Target</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="create-scheme.html">
+					<i class='bx bx-file'></i>
+					<span class="text">Create Scheme</span>
+				</a>
+			</li>
+			<li>
+				<a href="effcience.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency
 					</span>
 				</a>
 			</li>
 			<li class="active">
-				<a href="#">
-					<i class='bx bxs-message-dots'></i>
+				<a href="taskassignment.html">
+					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Message</span>
 				</a>
@@ -180,10 +186,10 @@
 					<ul class="box-info task-content-data">
 						<li style="background: rgb(0, 255, 128);">
 							<div class="content task-content-status">
-								<a href="completed.html" target="_blank">
+								<a href="completed.html" >
 									<h3>10</h3>
 								</a>
-								<a href="completed.html" target="_blank">
+								<a href="completed.html" >
 									<h3>Completed </h3>
 								</a>
 							</div>
@@ -191,10 +197,10 @@
 						</li>
 						<li style="background: rgb(255, 174, 0);">
 							<div class="content task-content-status">
-								<a href="" target="_blank">
+								<a href="" >
 									<h3>10</h3>
 								</a>
-								<a href="" target="_blank">
+								<a href="" >
 									<h3>In Progress</h3>
 								</a>
 							</div>
@@ -202,10 +208,10 @@
 						</li>
 						<li style="background: rgb(255, 42, 0);">
 							<div class="content task-content-status">
-								<a href="" target="_blank">
+								<a href="" >
 									<h3>10</h3>
 								</a>
-								<a href="deadline-crossed.html" target="_blank">
+								<a href="deadline-crossed.html" >
 									<h3>Deadline Crossed</h3>
 								</a>
 							</div>
