--- a/state admin/view-task-district.html
+++ b/state admin/view-task-district.html
@@ -42,20 +42,20 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="effcience.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency
 					</span>
 				</a>
 			</li>
 			<li class="active">
-				<a href="#">
-					<i class='bx bxs-message-dots'></i>
+				<a href="taskassignment.html">
+					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Message</span>
 				</a>
@@ -196,10 +196,10 @@
                         </li>
                         <li style="background: rgb(255, 174, 0);">
                             <div class="content task-content-status">
-                                <a href="" target="_blank">
-                                    <h3>10</h3>
+                                <a href="#" >
+                                    <h3>5</h3>
                                 </a>
-                                <a href="" target="_blank">
+                                <a href="#" >
                                     <h3>In Progress</h3>
                                 </a>
                             </div>
