--- a/adminhub-master/index.html
+++ b/adminhub-master/index.html
@@ -55,6 +55,12 @@
 					<span class="text">Message</span>
 				</a>
 			</li>
+			<li >
+				<a href="homepage-update.html">
+					<i class='bx bxs-dashboard'></i>
+					<span class="text">Home Page Update</span>
+				</a>
+			</li>
 			<!-- <li>
 				<a href="#">
 					<i class='bx bxs-group'></i>
@@ -98,12 +104,21 @@
 			<a href="#" class="notification">
 				<i class='bx bxs-bell'></i>
 				<span class="num">8</span>
+				<!-- <div class="notification-details"></div> -->
 			</a>
 			<a href="#" class="profile">
 				<img src="img/people.png">
 			</a>
 		</nav>
 		<!-- NAVBAR -->
+
+		<!-- <div id="notification">
+			<div class="notification-det-text">
+				<h4>message 1</h4>
+				<h4>message 2</h4>
+			</div>
+
+		</div> -->
 
 		<!-- MAIN -->
 		<main>
