--- a/state admin/blockreport.html
+++ b/state admin/blockreport.html
@@ -49,12 +49,12 @@
 			</li>
 			<li>
 				<a href="taskassignment.html">
-					<i class='bx bxs-message-dots'></i>
+					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Message</span>
 				</a>
@@ -74,7 +74,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="logout">
+				<a href="../index.html" class="logout">
 					<i class='bx bxs-log-out-circle'></i>
 					<span class="text">Logout</span>
 				</a>
