--- a/state admin/deadline-crossed.html
+++ b/state admin/deadline-crossed.html
@@ -42,7 +42,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="effcience.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency
 					</span>
@@ -55,7 +55,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Message</span>
 				</a>
@@ -75,7 +75,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="logout">
+				<a href="../index.html" class="logout">
 					<i class='bx bxs-log-out-circle'></i>
 					<span class="text">Logout</span>
 				</a>
