--- a/state admin/taskassign-1.html
+++ b/state admin/taskassign-1.html
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="message-box.html">
                     <i class='bx bxs-message-dots'></i>
                     <span class="text">Message</span>
                 </a>
@@ -74,7 +74,7 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="logout">
+                <a href="../index.html" class="logout">
                     <i class='bx bxs-log-out-circle'></i>
                     <span class="text">Logout</span>
                 </a>
