--- a/state admin/taskassignment.html
+++ b/state admin/taskassignment.html
@@ -42,7 +42,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="effcience.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency</span>
 				</a>
@@ -74,7 +74,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="logout">
+				<a href="../index.html" class="logout">
 					<i class='bx bxs-log-out-circle'></i>
 					<span class="text">Logout</span>
 				</a>
