--- a/state admin/view-data.html
+++ b/state admin/view-data.html
@@ -36,20 +36,26 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="create-scheme.html">
+					<i class='bx bx-file'></i>
+					<span class="text">Create Scheme</span>
+				</a>
+			</li>
+			<li>
+				<a href="effcience.html">
 					<i class='bx bxs-doughnut-chart'></i>
 					<span class="text">Efficiency
 					</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
-					<i class='bx bxs-message-dots'></i>
+				<a href="taskassignment.html">
+					<i class='bx bx-task'></i>
 					<span class="text">Task Assignment</span>
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="message-box.html">
 					<i class='bx bxs-message-dots'></i>
 					<span class="text">Message</span>
 				</a>
@@ -69,7 +75,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="logout">
+				<a href="../index.html" class="logout">
 					<i class='bx bxs-log-out-circle'></i>
 					<span class="text">Logout</span>
 				</a>
